# omegaflow

./: .clinerules  .continueignore  .env.example  .gitignore  .opencodeignore.bak  Cargo.toml  Dockerfile  README.md  config.yaml.md  constants.is  fly.toml  old2_index.html  old_index.html  test_ws.js
.continue/: config.yaml  env.example
.continue/rules/: CONTINUE.md  omegaflow-gremium.md  omegaflow-project-conventions.md
.continue_/: config.yaml
crates/: omegaflow_dump.txt
crates/compiler/: Cargo.toml
crates/compiler/src/: main.rs
crates/nebra-api/: Cargo.toml
crates/nebra-api/src/: main.rs
crates/nebra-client/src/: main.rs
crates/nebra-core/: Cargo.toml
crates/nebra-core/src/: field.rs  lib.rs  numerics.rs  projection.rs  types.rs
crates/nebra-core/tests/: numerics.rs
crates/nebra-pilot/src/: main.rs
crates/nebra-render/: Cargo.toml
crates/nebra-render/src/: compute.rs  uniforms.rs
crates/nebra-server/: Cargo.toml
crates/nebra-server/src/: state.rs
crates/nebra-trad/: Cargo.toml
crates/nebra-trad/src/: lib.rs
crates/omegaflow-client/: Cargo.toml
crates/omegaflow-client/src/: main.rs
crates/omegaflow-client/static/: eval_state.wgsl
crates/omegaflow-core/: Cargo.toml
crates/omegaflow-core/src/: ephemerides.rs  lib.rs  terrain.rs
crates/omegaflow-pool/: Cargo.toml
crates/omegaflow-pool/src/: main.rs
crates/omegaflow-server/: Cargo.toml
crates/omegaflow-server/src/: ephemerides.rs  lib.rs  magnetic.rs  main.rs  state.rs  terrain.rs
crates/omegaflow-server/static/: client.js  dict_glsl.glsl  dict_wgsl.wgsl  eval.wgsl  eval_logic.glsl  eval_observer.glsl  eval_perception.glsl  eval_state.glsl  eval_state.wgsl  index.html  manifest.json  sw.js  webgl.js  webgpu.js
crates/omegaflow-server/tests/: integration_tests.rs
crates/omegaflow-wasm/: Cargo.toml
crates/omegaflow-wasm/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/static/: index.html  world.js
docs/: APPEAL_MASTER.MD  ARCHITECTURE.md  MANUSCRIPT.md  NEBRA_ARCHITECTURE_SPECIFICATION.yaml  PIPELINE.yaml  ROADMAP.md  api_keys.md  config.yaml  council_fiction.yaml  foundation.yaml  nebra.yaml  omegaflow.yaml  omegaflow_sense_hardware.yaml  resources.md
docs/archive/: ARCHITECTURE.md  MANUSCRIPT.md
home/johannes/projects/nebra/crates/nebra-core/src/: lib.rs  projection.rs
home/johannes/projects/omegaflow/is/: sources.is
home/johannes/projects/omegaflow/φ/: new_sources.φ
immune/: definitions.js  dormant  scan.html
is/: asteroids.idx  asteroids.is  dormant.is  immunity.is  lookups.is  sensors.is  sources.is  stars.idx  stars.is
phi/: sources.φ
reference/nebra/: .gitignore  Cargo.toml
reference/nebra/crates/nebra-api/: Cargo.toml
reference/nebra/crates/nebra-api/src/: main.rs
reference/nebra/crates/nebra-core/src/: field.rs  lib.rs
reference/nebra/docs/: nebra.yaml
src/: main.rs
static/: constants.js  gpu.worker.js  index.html  index.html.bak  world.js
φ/: dormant.φ  sources.φ  sources_sorted.φ
