[package]
name = "nebra-core"
version = "3.0.0"
edition = "2024"

[lib]
name = "nebra_core"
crate-type = ["rlib", "cdylib"]

[dependencies]
hifitime = "4.3"
glam = "0.33"
nalgebra = "0.35"
anise = { git = "https://github.com/nyx-space/anise", branch = "master" }
erfars = "0.2"
egm96 = "0.2"
srtm_reader = "0.5"
geo = "0.33"
geographiclib-rs = "0.2"
world_magnetic_model = "0.4"
grib = "0.10"
netcdf-reader = "0.6"
hdf5-reader = "0.6"
fitsrs = "0.4"
cdshealpix = "0.9"
tobari = "0.2"
ionotrace = "0.5"
moka = { version = "0.12", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
bytemuck = "1.25"

[dev-dependencies]
proptest = "1"
