[package]
name = "nebra-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nebra_core"

[dependencies]
hifitime = "4.3"
glam = "0.33"
anise = { git = "https://github.com/nyx-space/anise", branch = "master" }
serde = { version = "1", features = ["derive"] }
egm96 = "0.2"
srtm_reader = "0.5"
geo = "0.33"
geographiclib-rs = "0.2"
world_magnetic_model = { git = "https://github.com/johannestyroller/world_magnetic_model", branch = "expose-wmm-models" }
grib = "0.10"
netcdf-reader = "0.6"
hdf5-reader = "0.6"
fitsrs = "0.4"
cdshealpix = "0.9"
tobari = "0.2"
ionotrace = "0.5"
