[package]
name = "omegaflow-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "omegaflow_server"
crate-type = ["cdylib", "rlib"]

[dependencies]
hifitime = "4.3"
glam = "0.33"
anise = { git = "https://github.com/nyx-space/anise", branch = "master" }
serde = { version = "1", features = ["derive"] }
world_magnetic_model = { git = "https://github.com/johannestyroller/world_magnetic_model", branch = "expose-wmm-models" }
wasm-bindgen = "0.2"
