[package]
name = "omegaflow-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
glam = "0.33"
omegaflow-server = { path = "../omegaflow-server" }
