[package]
name = "omegaflow-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
tower = "0.5"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
omegaflow-server = { path = "../omegaflow-server" }
