[package]
name = "omegaflow-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "omegaflow_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
anise = { git = "https://github.com/nyx-space/anise", branch = "master" }
bytes = "1"
glam = "0.33"
hifitime = "4.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
world_magnetic_model = { git = "https://github.com/johannestyroller/world_magnetic_model", branch = "expose-wmm-models" }
