[package]
name = "omegaflow-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
glam = "0.33"
naga = { version = "29", features = ["wgsl-in", "glsl-out"] }
omegaflow-core = { path = "../omegaflow-core" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tower = "0.5"
