[package]
name = "omegaflow-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glam = "0.33"
omegaflow-core = { path = "../omegaflow-core", default-features = false }
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"

[dependencies.web-sys]
version = "0.3.77"
features = ["Window", "Performance"]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
